--- a/reactApp/nextjs-blog/package.json
+++ b/reactApp/nextjs-blog/package.json
@@ -9,8 +9,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
+    "gray-matter": "^4.0.3",
+    "remark": "^14.0.3",
+    "remark-html": "^15.0.2",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
+  
 }
