--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./reactApp:/usr/src/app # ローカルをコンテナ内にマウント
-    command: sh -c "cd nextjs-blog && npm run dev"
+    command: sh -c "cd nextjs-blog && npm install && npm run dev"
     ports:
       - "3000:3000"
     stdin_open: true
