--- a/reactApp/nextjs-blog/package.json
+++ b/reactApp/nextjs-blog/package.json
@@ -9,14 +9,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.7",
+    "autoprefixer": "^10.4.15",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "gray-matter": "^4.0.3",
+    "next": "latest",
+    "postcss": "^8.4.29",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "remark": "^14.0.3",
     "remark-html": "^15.0.2",
-    "next": "latest",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "tailwindcss": "^3.3.3"
   }
-  
 }
